simplify CSS; alternatives to 'display: none' do not solve the collapsed code cell problem

--- a/style/index.css
+++ b/style/index.css
@@ -17,5 +17,4 @@ pre {
   line-height: var(--jp-code-line-height);
 }
 
-.jp-NotebookPanel-notebook > .jp-Cell { display: none; }
-.jp-NotebookPanel-notebook > .jp-Cell.jp-mod-selected { display: block; }
+.jp-NotebookPanel-notebook > .jp-Cell:not(.jp-mod-selected) { display: none; }
